added-other-dependencies

--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vueuse/nuxt": "^11.0.3",
+    "nanoid": "^5.0.7",
     "nuxt": "^3.13.0",
-    "vue": "latest"
+    "vue": "latest",
+    "vuedraggable": "^4.1.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.1"
   }
 }
